base/auth-deployment.yaml
# base/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdns-authoritative
  namespace: dns-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pdns-authoritative
  template:
    metadata:
      labels:
        app: pdns-authoritative
    spec:
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      containers:
      - name: powerdns
        image: powerdns/pdns-auth-48:latest
        ports:
        - containerPort: 53
          protocol: UDP
        - containerPort: 53
          protocol: TCP
        - containerPort: 8081
          protocol: TCP
