base/external-recursor-deployment.yaml
# base/external-recursor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdns-recursor-external
  namespace: dns-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pdns-recursor-external
  template:
    metadata:
      labels:
        app: pdns-recursor-external
    spec:
      containers:
      - name: pdns-recursor
        image: powerdns/pdns-recursor-49:latest
        ports:
        - containerPort: 53
          protocol: UDP
        - containerPort: 53
          protocol: TCP
