base/internal-recursor-deployment.yaml
# base/internal-recursor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdns-recursor-internal
  namespace: dns-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pdns-recursor-internal
  template:
    metadata:
      labels:
        app: pdns-recursor-internal
    spec:
      containers:
      - name: pdns-recursor
        image: powerdns/pdns-recursor-49:latest
        ports:
        - containerPort: 53
          protocol: UDP
        - containerPort: 53
          protocol: TCP
