base/mock-smd.yaml
# base/mock-smd.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smd-mock
  namespace: dns-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smd-mock
  template:
    metadata:
      labels:
        app: smd-mock
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
        - name: config
          mountPath: /usr/share/nginx/html/ethernet-interfaces.json
          subPath: ethernet-interfaces.json
      volumes:
      - name: config
        configMap:
          name: smd-mock-data
---
apiVersion: v1
kind: Service
metadata:
  name: smd-mock
  namespace: dns-system
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: smd-mock
